--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "prettier": "3.3.1",
     "tailwindcss": "^3.4.3",
     "vite": "^4.1.0"
   }
